# ForzaFFB

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml  requirements.txt
src/forza_ffb/: __init__.py  __main__.py  bridge.py  config.py  ffb.py  packet.py  telemetry.py
src/forza_ffb/outputs/: __init__.py  base.py  console.py  ffbwheel.py  vjoy.py
tasks/: lessons.md  todo.md
tests/: test_ffb.py  test_ffbwheel.py  test_integration.py  test_packet.py
tools/: fake_forza_sender.py
