[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forza-ffb"
version = "1.0.0"
description = "Bridge Forza Horizon 6 Data Out telemetry into synthesized force-feedback channels for vJoy / Joystick Gremlin"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["forza", "telemetry", "force-feedback", "vjoy", "joystick-gremlin", "sim-racing"]
dependencies = []  # core + console backend + tests need only the standard library

[project.optional-dependencies]
# Install with:  pip install -e .[vjoy]   (Windows + vJoy driver)
vjoy = ["pyvjoy>=1.0.1 ; platform_system == 'Windows'"]
# Install with:  pip install -e .[ffbwheel]   (real FFB to a physical wheel, e.g. MOZA R3)
ffbwheel = ["pysdl2>=0.9.16", "pysdl2-dll>=2.28.0 ; platform_system == 'Windows'"]

[project.scripts]
# After install, run the bridge as either `forza_ffb ...` or `python -m forza_ffb ...`
forza_ffb = "forza_ffb.bridge:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
